Finished implementation of basic mapping in ebInterface Importer.  - Adapted old unit tests.  - New implementation is based on XSD mapping importer concepts paper.  - Needs a lot of refactoring.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -196,21 +196,33 @@
     <Compile Include="upcc3\XSDImporter\ccts\BIESchemaImporter.cs" />
     <Compile Include="upcc3\XSDImporter\ccts\RootSchemaImporter.cs" />
     <Compile Include="upcc3\XSDImporter\ccts\XSDImporter.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\AbstractMapping.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\ASCCMapping.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\BCCMapping.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\ConstantComponent.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\ASBIEMapping.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\Edge.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\Entry.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\Graph.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\IMapping.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\IMappingVisitor.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\InputOutputKey.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\ElementMapping.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\LinqToXmlMapForceMappingImporter.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\MapForceMapping.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\Mapping.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\MappedLibraryGenerator.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\MappingError.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\MappingImporter.cs" />
-    <Compile Include="upcc3\XSDImporter\ebInterface\Mappings.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\MappingPrettyPrinter.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\SchemaMapping.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\Namespace.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\ComplexTypeMapping.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\NullComplexTypeMapping.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\NullMapping.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\SchemaComponent.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\SourceElement.cs" />
-    <Compile Include="upcc3\XSDImporter\ebInterface\SourceElementStore.cs" />
+    <Compile Include="upcc3\XSDImporter\ebInterface\MapForceSourceElementTree.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\TargetBIEElement.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\TargetCCElement.cs" />
     <Compile Include="upcc3\XSDImporter\ebInterface\TargetElementStore.cs" />
