--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -181,6 +181,9 @@
     <Compile Include="upcc3\ccts\util\EAElementExtensions.cs" />
     <Compile Include="upcc3\ccts\util\EATaggedValueExtensions.cs" />
     <Compile Include="upcc3\ccts\util\MultiPartTaggedValue.cs" />
+    <Compile Include="upcc3\import\cctsndr\BDTComplexType.cs" />
+    <Compile Include="upcc3\import\cctsndr\BDTSimpleType.cs" />
+    <Compile Include="upcc3\import\cctsndr\BDTXsdType.cs" />
     <Compile Include="upcc3\NDR.cs" />
     <Compile Include="upcc3\Wizards\ImporterWizardForm.cs">
       <SubType>Form</SubType>
@@ -209,7 +212,7 @@
     <Compile Include="upcc3\export\cctsndr\CCSchemaGenerator.cs" />
     <Compile Include="upcc3\export\cctsndr\CDTSchemaGenerator.cs" />
     <Compile Include="upcc3\export\cctsndr\GeneratorContext.cs" />
-    <Compile Include="upcc3\import\cctsndr\BDTSchemaImporter.cs" />
+    <Compile Include="upcc3\import\cctsndr\BDTXsdImporter.cs" />
     <Compile Include="upcc3\import\cctsndr\BIESchemaImporter.cs" />
     <Compile Include="upcc3\import\cctsndr\RootSchemaImporter.cs" />
     <Compile Include="upcc3\import\cctsndr\XSDImporter.cs" />
