--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -189,6 +189,14 @@
     <Compile Include="upcc3\import\cctsndr\bdt\BDTXsdType.cs" />
     <Compile Include="upcc3\import\cctsndr\bdt\SUPXsdAttributes.cs" />
     <Compile Include="upcc3\NDR.cs" />
+    <Compile Include="upcc3\Wizards\dev\ABIEModelerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="upcc3\Wizards\dev\ABIEModelerForm.Designer.cs">
+      <DependentUpon>ABIEModelerForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="upcc3\Wizards\dev\util\CCCache.cs" />
+    <Compile Include="upcc3\Wizards\dev\util\TemporaryModel.cs" />
     <Compile Include="upcc3\Wizards\ImporterWizardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -483,6 +491,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="upcc3\Wizards\BDTWizardForm.resx">
       <DependentUpon>BDTWizardForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="upcc3\Wizards\dev\ABIEModelerForm.resx">
+      <DependentUpon>ABIEModelerForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="upcc3\Wizards\GeneratorWizardForm.resx">
