--- a/trunk/CCLImporter/CCLConverter.csproj
+++ b/trunk/CCLImporter/CCLConverter.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UPCCRepository\UPCCRepositoryInterface.csproj">
+    <ProjectReference Include="..\UPCCRepositoryInterface\UPCCRepositoryInterface.csproj">
       <Project>{D788A632-CD92-4C8A-AE54-A37CD5871368}</Project>
       <Name>UPCCRepositoryInterface</Name>
     </ProjectReference>
