--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -514,7 +514,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UPCCRepository\UPCCRepositoryInterface.csproj">
+    <ProjectReference Include="..\UPCCRepositoryInterface\UPCCRepositoryInterface.csproj">
       <Project>{D788A632-CD92-4C8A-AE54-A37CD5871368}</Project>
       <Name>UPCCRepositoryInterface</Name>
     </ProjectReference>
