--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -184,12 +184,11 @@
     <Compile Include="upcc3\Wizards\dev\ABIEModelerForm.Designer.cs">
       <DependentUpon>ABIEModelerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="upcc3\Wizards\dev\util\CacheItemBDTLibrary.cs" />
-    <Compile Include="upcc3\Wizards\dev\util\CacheItemBIELibraries.cs" />
-    <Compile Include="upcc3\Wizards\dev\util\CacheItemCCLibrary.cs" />
-    <Compile Include="upcc3\Wizards\dev\util\CacheItemCDTLibrary.cs" />
-    <Compile Include="upcc3\Wizards\dev\util\CCCache.cs" />
-    <Compile Include="upcc3\Wizards\dev\util\TemporaryModel.cs" />
+    <Compile Include="upcc3\Wizards\dev\cache\CacheItemBDTLibrary.cs" />
+    <Compile Include="upcc3\Wizards\dev\cache\CacheItemBIELibraries.cs" />
+    <Compile Include="upcc3\Wizards\dev\cache\CacheItemCCLibrary.cs" />
+    <Compile Include="upcc3\Wizards\dev\cache\CacheItemCDTLibrary.cs" />
+    <Compile Include="upcc3\Wizards\dev\cache\CCCache.cs" />
     <Compile Include="upcc3\Wizards\ImporterWizardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -530,5 +529,6 @@
   <ItemGroup>
     <Folder Include="doc\" />
     <Folder Include="images\" />
+    <Folder Include="upcc3\Wizards\dev\util\" />
   </ItemGroup>
 </Project>
