--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -79,6 +79,24 @@
     <Compile Include="TestRepository\EmptyEARepository.cs" />
     <Compile Include="TestRepository\IDFactory.cs" />
     <Compile Include="TestRepository\TemporaryFileBasedRepository.cs" />
+    <Compile Include="upcc3\newrepo\ea\EaUmlDependency.cs" />
+    <Compile Include="upcc3\newrepo\upcc\UpccBLibrary.cs" />
+    <Compile Include="upcc3\newrepo\NewRepoTests.cs" />
+    <Compile Include="upcc3\newrepo\upcc\uml\IUmlDependency.cs" />
+    <Compile Include="upcc3\newrepo\upcc\UpccRepository.cs" />
+    <Compile Include="upcc3\newrepo\ea\EaUmlRepository.cs" />
+    <Compile Include="upcc3\newrepo\EARepositoryWithTwoPRIMs.cs" />
+    <Compile Include="upcc3\newrepo\upcc\uml\EmptyUmlTaggedValue.cs" />
+    <Compile Include="upcc3\newrepo\ccts\ICctsRepository.cs" />
+    <Compile Include="upcc3\newrepo\upcc\uml\IUmlClass.cs" />
+    <Compile Include="upcc3\newrepo\upcc\uml\IUmlPackage.cs" />
+    <Compile Include="upcc3\newrepo\upcc\uml\IUmlRepository.cs" />
+    <Compile Include="upcc3\newrepo\upcc\uml\IUmlTaggedValue.cs" />
+    <Compile Include="upcc3\newrepo\upcc\UpccPrim.cs" />
+    <Compile Include="upcc3\newrepo\upcc\UpccPrimLibrary.cs" />
+    <Compile Include="upcc3\newrepo\ea\EaUmlClass.cs" />
+    <Compile Include="upcc3\newrepo\ea\EaUmlPackage.cs" />
+    <Compile Include="upcc3\newrepo\ea\EaUmlTaggedValue.cs" />
     <Compile Include="upcc3\ccts\otf\validators\BLibraryValidatorTests.cs" />
     <Compile Include="upcc3\ccts\otf\validators\BusinessLibraryValidatorTests.cs" />
     <Compile Include="upcc3\ccts\otf\validators\PRIMLibraryValidatorTests.cs" />
