--- a/CctsRepository/CctsRepository.csproj
+++ b/CctsRepository/CctsRepository.csproj
@@ -49,7 +49,6 @@
     <Compile Include="ACCSpec.cs" />
     <Compile Include="ASBIESpec.cs" />
     <Compile Include="ASCCSpec.cs" />
-    <Compile Include="AttributeSpec.cs" />
     <Compile Include="BBIESpec.cs" />
     <Compile Include="BCCSpec.cs" />
     <Compile Include="BDTSpec.cs" />
@@ -58,10 +57,8 @@
     <Compile Include="CDTSpec.cs" />
     <Compile Include="CDTSupplementaryComponentSpec.cs" />
     <Compile Include="CodelistEntrySpec.cs" />
-    <Compile Include="ConnectorSpec.cs" />
     <Compile Include="BDTContentComponentSpec.cs" />
-    <Compile Include="EAAggregationKind.cs" />
-    <Compile Include="EAConnectorTypes.cs" />
+    <Compile Include="AggregationKind.cs" />
     <Compile Include="ENUMSpec.cs" />
     <Compile Include="IABIE.cs" />
     <Compile Include="IACC.cs" />
@@ -104,7 +101,6 @@
     <Compile Include="Stereotype.cs" />
     <Compile Include="BDTSupplementaryComponentSpec.cs" />
     <Compile Include="TaggedValues.cs" />
-    <Compile Include="TaggedValueSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VIENNAAddInUtils\VIENNAAddInUtils.csproj">
