Update issue 91 Refactoring CctsRepository interface and specs  * Creating sub-folders for UPCC library types.

--- a/CctsRepository/CctsRepository.csproj
+++ b/CctsRepository/CctsRepository.csproj
@@ -45,54 +45,54 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="bie\ABIESpec.cs" />
-    <Compile Include="cc\ACCSpec.cs" />
-    <Compile Include="bie\ASBIESpec.cs" />
-    <Compile Include="cc\ASCCSpec.cs" />
-    <Compile Include="bie\BBIESpec.cs" />
-    <Compile Include="cc\BCCSpec.cs" />
-    <Compile Include="bdt\BDTSpec.cs" />
+    <Compile Include="BieLibrary\ABIESpec.cs" />
+    <Compile Include="CcLibrary\ACCSpec.cs" />
+    <Compile Include="BieLibrary\ASBIESpec.cs" />
+    <Compile Include="CcLibrary\ASCCSpec.cs" />
+    <Compile Include="BieLibrary\BBIESpec.cs" />
+    <Compile Include="CcLibrary\BCCSpec.cs" />
+    <Compile Include="BdtLibrary\BDTSpec.cs" />
     <Compile Include="CCTSElementSpec.cs" />
-    <Compile Include="cdt\CDTContentComponentSpec.cs" />
-    <Compile Include="cdt\CDTSpec.cs" />
-    <Compile Include="cdt\CDTSupplementaryComponentSpec.cs" />
-    <Compile Include="enum\CodelistEntrySpec.cs" />
-    <Compile Include="bdt\BDTContentComponentSpec.cs" />
+    <Compile Include="CdtLibrary\CDTContentComponentSpec.cs" />
+    <Compile Include="CdtLibrary\CDTSpec.cs" />
+    <Compile Include="CdtLibrary\CDTSupplementaryComponentSpec.cs" />
+    <Compile Include="EnumLibrary\CodelistEntrySpec.cs" />
+    <Compile Include="BdtLibrary\BDTContentComponentSpec.cs" />
     <Compile Include="AggregationKind.cs" />
-    <Compile Include="enum\ENUMSpec.cs" />
-    <Compile Include="bie\IABIE.cs" />
-    <Compile Include="cc\IACC.cs" />
-    <Compile Include="bie\IASBIE.cs" />
-    <Compile Include="cc\IASCC.cs" />
+    <Compile Include="EnumLibrary\ENUMSpec.cs" />
+    <Compile Include="BieLibrary\IABIE.cs" />
+    <Compile Include="CcLibrary\IACC.cs" />
+    <Compile Include="BieLibrary\IASBIE.cs" />
+    <Compile Include="CcLibrary\IASCC.cs" />
     <Compile Include="IBasicType.cs" />
-    <Compile Include="bie\IBBIE.cs" />
-    <Compile Include="cc\IBCC.cs" />
-    <Compile Include="bdt\IBDT.cs" />
-    <Compile Include="bdt\IBDTContentComponent.cs" />
-    <Compile Include="bdt\IBDTLibrary.cs" />
-    <Compile Include="bie\IBIE.cs" />
-    <Compile Include="bie\IBIELibrary.cs" />
+    <Compile Include="BieLibrary\IBBIE.cs" />
+    <Compile Include="CcLibrary\IBCC.cs" />
+    <Compile Include="BdtLibrary\IBDT.cs" />
+    <Compile Include="BdtLibrary\IBDTContentComponent.cs" />
+    <Compile Include="BdtLibrary\IBDTLibrary.cs" />
+    <Compile Include="BieLibrary\IBIE.cs" />
+    <Compile Include="BieLibrary\IBIELibrary.cs" />
     <Compile Include="bLibrary\IBLibrary.cs" />
     <Compile Include="IBusinessLibrary.cs" />
-    <Compile Include="cc\ICC.cs" />
-    <Compile Include="cc\ICCLibrary.cs" />
+    <Compile Include="CcLibrary\ICC.cs" />
+    <Compile Include="CcLibrary\ICCLibrary.cs" />
     <Compile Include="ICCRepository.cs" />
     <Compile Include="ICCTSElement.cs" />
-    <Compile Include="cdt\ICDT.cs" />
-    <Compile Include="cdt\ICDTLibrary.cs" />
-    <Compile Include="cdt\ICDTSupplementaryComponent.cs" />
-    <Compile Include="enum\ICodelistEntry.cs" />
-    <Compile Include="cdt\ICDTContentComponent.cs" />
-    <Compile Include="doc\IDOCLibrary.cs" />
-    <Compile Include="enum\IENUM.cs" />
-    <Compile Include="enum\IENUMLibrary.cs" />
-    <Compile Include="prim\IPRIM.cs" />
-    <Compile Include="prim\IPRIMLibrary.cs" />
-    <Compile Include="bdt\IBDTSupplementaryComponent.cs" />
+    <Compile Include="CdtLibrary\ICDT.cs" />
+    <Compile Include="CdtLibrary\ICDTLibrary.cs" />
+    <Compile Include="CdtLibrary\ICDTSupplementaryComponent.cs" />
+    <Compile Include="EnumLibrary\ICodelistEntry.cs" />
+    <Compile Include="CdtLibrary\ICDTContentComponent.cs" />
+    <Compile Include="DocLibrary\IDOCLibrary.cs" />
+    <Compile Include="EnumLibrary\IENUM.cs" />
+    <Compile Include="EnumLibrary\IENUMLibrary.cs" />
+    <Compile Include="PrimLibrary\IPRIM.cs" />
+    <Compile Include="PrimLibrary\IPRIMLibrary.cs" />
+    <Compile Include="BdtLibrary\IBDTSupplementaryComponent.cs" />
     <Compile Include="bLibrary\LibrarySpec.cs" />
-    <Compile Include="prim\PRIMSpec.cs" />
+    <Compile Include="PrimLibrary\PRIMSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="bdt\BDTSupplementaryComponentSpec.cs" />
+    <Compile Include="BdtLibrary\BDTSupplementaryComponentSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VIENNAAddInUtils\VIENNAAddInUtils.csproj">
