Update issue 91 Refactoring CctsRepository interface and specs  * Moving EA-specific stuff.

--- a/CctsRepository/CctsRepository.csproj
+++ b/CctsRepository/CctsRepository.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsbieAggregationKind.cs" />
+    <Compile Include="BieLibrary\AsbieAggregationKind.cs" />
     <Compile Include="BieLibrary\ABIESpec.cs" />
     <Compile Include="CcLibrary\ACCSpec.cs" />
     <Compile Include="BieLibrary\ASBIESpec.cs" />
